--- a/myNewPizza-ejb/nbproject/project.properties
+++ b/myNewPizza-ejb/nbproject/project.properties
@@ -22,8 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.myNewPizza-lib.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Neuer Ordner\\myNewPizza-lib\\dist\\myNewPizza-lib.jar
-file.reference.myNewPizza-lib.jar-1=..\\myNewPizza-lib\\dist\\myNewPizza-lib.jar
+file.reference.myNewPizza-lib.jar=../myNewPizza-lib/dist/myNewPizza-lib.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,10 +36,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=myNewPizza-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=\
-    ${file.reference.myNewPizza-lib.jar}:\
-    ${reference.myNewPizza-lib.jar}:\
-    ${file.reference.myNewPizza-lib.jar-1}
+    ${file.reference.myNewPizza-lib.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -68,8 +66,6 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
-project.myNewPizza-lib=../../myNewPizza-lib
-reference.myNewPizza-lib.jar=${project.myNewPizza-lib}/dist/myNewPizza-lib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
