--- a/myNewPizza-war/nbproject/project.properties
+++ b/myNewPizza-war/nbproject/project.properties
@@ -32,8 +32,7 @@ excludes=
 file.reference.itext-pdfa-5.5.9.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Beispiele\\pizzeriaDB\\lib\\itext-pdfa-5.5.9.jar
 file.reference.itext-xtra-5.5.9.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Beispiele\\pizzeriaDB\\lib\\itext-xtra-5.5.9.jar
 file.reference.itextpdf-5.5.9.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Beispiele\\pizzeriaDB\\lib\\itextpdf-5.5.9.jar
-file.reference.myNewPizza-lib.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Neuer Ordner\\myNewPizza-lib\\dist\\myNewPizza-lib.jar
-file.reference.myNewPizza-lib.jar-1=..\\myNewPizza-lib\\dist\\myNewPizza-lib.jar
+file.reference.mysql-connector-java-6.0.5-bin.jar=C:\\Users\\Teilnehmer\\Downloads\\mysql-connector-java-6.0.5\\mysql-connector-java-6.0.5\\mysql-connector-java-6.0.5-bin.jar
 file.reference.xmlworker-5.5.9.jar=C:\\Users\\Teilnehmer\\Documents\\NetBeansProjects\\Beispiele\\pizzeriaDB\\lib\\xmlworker-5.5.9.jar
 includes=**
 j2ee.compile.on.save=true
@@ -49,14 +48,14 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.myNewPizza-ejb.dist}:\
     ${libs.primefaces.classpath}:\
     ${file.reference.itext-pdfa-5.5.9.jar}:\
     ${file.reference.itext-xtra-5.5.9.jar}:\
     ${file.reference.itextpdf-5.5.9.jar}:\
     ${file.reference.xmlworker-5.5.9.jar}:\
-    ${file.reference.myNewPizza-lib.jar}:\
-    ${file.reference.myNewPizza-lib.jar-1}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mysql-connector-java-6.0.5-bin.jar}:\
+    ${reference.myNewPizza-lib.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -85,8 +84,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.myNewPizza-ejb=../myNewPizza-ejb
-reference.myNewPizza-ejb.dist=${project.myNewPizza-ejb}/dist/myNewPizza-ejb.jar
+project.myNewPizza-lib=../myNewPizza-lib
+reference.myNewPizza-lib.jar=${project.myNewPizza-lib}/dist/myNewPizza-lib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
