--- a/myNewPizza-ejb/nbproject/project.properties
+++ b/myNewPizza-ejb/nbproject/project.properties
@@ -22,7 +22,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.myNewPizza-lib.jar=../myNewPizza-lib/dist/myNewPizza-lib.jar
+file.reference.mysql-connector-java-6.0.5-bin.jar=C:\\Users\\Teilnehmer\\Downloads\\mysql-connector-java-6.0.5\\mysql-connector-java-6.0.5\\mysql-connector-java-6.0.5-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -38,7 +38,8 @@ jar.compress=false
 jar.name=myNewPizza-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
-    ${file.reference.myNewPizza-lib.jar}
+    ${file.reference.mysql-connector-java-6.0.5-bin.jar}:\
+    ${reference.myNewPizza-lib.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
@@ -66,6 +67,8 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
+project.myNewPizza-lib=../myNewPizza-lib
+reference.myNewPizza-lib.jar=${project.myNewPizza-lib}/dist/myNewPizza-lib.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
