--- a/myNewPizza-lib/nbproject/project.properties
+++ b/myNewPizza-lib/nbproject/project.properties
@@ -4,8 +4,6 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=myNewPizza-lib
-application.vendor=Teilnehmer
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -28,14 +26,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/myNewPizza-lib.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.javaee-web-api-6.0.jar=../../../../../../../../Program Files/NetBeans 8.2/enterprise/modules/ext/javaee-web-api-6.0.jar
+file.reference.mysql-connector-java-6.0.5-bin.jar=../../../../../Downloads/mysql-connector-java-6.0.5/mysql-connector-java-6.0.5/mysql-connector-java-6.0.5-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.javaee-web-api-6.0.jar}
+    ${libs.javaee-api-7.0.classpath}:\
+    ${file.reference.mysql-connector-java-6.0.5-bin.jar}:\
+    ${libs.hibernate4-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
